; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rsu.c_rsu_get_rssi.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rsu.c_rsu_get_rssi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsu_softc = type { i32 }
%struct.r92s_rx_phystat = type { i32 }
%struct.r92s_rx_cck = type { i32 }

@rsu_get_rssi.cckoff = internal constant [4 x i32] [i32 14, i32 -2, i32 -20, i32 -40], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rsu_softc*, i32, i8*)* @rsu_get_rssi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rsu_get_rssi(%struct.rsu_softc* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.rsu_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.r92s_rx_phystat*, align 8
  %8 = alloca %struct.r92s_rx_cck*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.rsu_softc* %0, %struct.rsu_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %11 = load i32, i32* %5, align 4
  %12 = icmp sle i32 %11, 3
  br i1 %12, label %13, label %31

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = bitcast i8* %14 to %struct.r92s_rx_cck*
  store %struct.r92s_rx_cck* %15, %struct.r92s_rx_cck** %8, align 8
  %16 = load %struct.r92s_rx_cck*, %struct.r92s_rx_cck** %8, align 8
  %17 = getelementptr inbounds %struct.r92s_rx_cck, %struct.r92s_rx_cck* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = ashr i32 %18, 6
  %20 = and i32 %19, 3
  %21 = sext i32 %20 to i64
  store i64 %21, i64* %9, align 8
  %22 = load %struct.r92s_rx_cck*, %struct.r92s_rx_cck** %8, align 8
  %23 = getelementptr inbounds %struct.r92s_rx_cck, %struct.r92s_rx_cck* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = and i32 %24, 62
  store i32 %25, i32* %10, align 4
  %26 = load i64, i64* %9, align 8
  %27 = getelementptr inbounds [4 x i32], [4 x i32]* @rsu_get_rssi.cckoff, i64 0, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %10, align 4
  %30 = sub nsw i32 %28, %29
  store i32 %30, i32* %10, align 4
  br label %41

31:                                               ; preds = %3
  %32 = load i8*, i8** %6, align 8
  %33 = bitcast i8* %32 to %struct.r92s_rx_phystat*
  store %struct.r92s_rx_phystat* %33, %struct.r92s_rx_phystat** %7, align 8
  %34 = load %struct.r92s_rx_phystat*, %struct.r92s_rx_phystat** %7, align 8
  %35 = getelementptr inbounds %struct.r92s_rx_phystat, %struct.r92s_rx_phystat* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @le32toh(i32 %36)
  %38 = ashr i32 %37, 1
  %39 = and i32 %38, 127
  %40 = sub nsw i32 %39, 106
  store i32 %40, i32* %10, align 4
  br label %41

41:                                               ; preds = %31, %13
  %42 = load i32, i32* %10, align 4
  ret i32 %42
}

declare dso_local i32 @le32toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
